--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 
     <section class="secaoDestaque">
       <h1 class="secaoDestaque-titulo">
-        APLICATIVOS NA MEDIDA
+       APLICATIVOS NA MEDIDA
       </h1>
       <p class="secaoDestaque-texto">
         A Apeperia é uma startup com um jeito inovador de comprar e montar aplicativos mobile e web para pequenas e médias empresas
       </p>
 
       <button class="secaoDestaque-cta btnPadrao">
-        Conheça os planos
+        Sobre a Apeperia
       </button>
     </section>
 
