--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@
             Um pouco mais sobre a Apeperia
           </p>
           <p class="secaoInstitucional-endereco">
-            Rua Vergueiro, 3185 <br> Vila Mariana, São Paulo
+            Av juscelino kubitchck, 2372 <br> Boa Vita, Londrina
           </p>
           <p class="secaoInstitucional-telefone">
-            (11) 5571-2751 ou <a href="#"> contato@apeperia.com</a>
+            (43) 991471566 ou <a href="#"> luis.otavioinacio.pereira@escola.pr.gov.br</a>
           </p>
         </div>
 
