--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <nav class="cabecalho-nav">
       <ul>
         <li class="cabecalho-nav-item"><a href="#">Sobre</a></li>
-        <li class="cabecalho-nav-item"><a href="#">Planos</a></li>
+        <li class="cabecalho-nav-item"><a href="#secao1">Planos</a></li>
         <li class="cabecalho-nav-item"><a href="#">Blog</a></li>
         <li class="cabecalho-nav-item"><a href="#">Destaques</a></li>
         <li class="cabecalho-nav-item"><a href="#">Institucional</a></li>
@@ -142,8 +142,8 @@
 
     <section class="secaoPlanos">
       <div class="container">
-        <h1 class="secaoPlanos-titulo tituloPadrao">
-          PLANOS
+        <h1 id= "secao1" class="secaoPlanos-titulo tituloPadrao">
+          #PLANOS
         </h1>
 
         <div class="secaoPlanos-plano secaoPlanos-plano--start">
@@ -333,7 +333,7 @@
         <form class="secaoContato-form">
 
           <p class="secaoContato-form-legend">
-            Oi, tudo bem? Fale com a gente!
+            Oi, tudo bem? Fale com agnte
             Preencha seus dados e sua mensagem:
           </p>
 
