--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             Um pouco mais sobre a Apeperia
           </p>
           <p class="secaoInstitucional-endereco">
-            Av juscelino kubitchck, 2372 <br> Boa Vita, Londrina
+            Av juscelino kubitschek, 2372 <br> Boa Vita, Londrina
           </p>
           <p class="secaoInstitucional-telefone">
             (43) 991471566 ou <a href="#"> luis.otavioinacio.pereira@escola.pr.gov.br</a>
