--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
           <article class="listaDeArtigos-artigo">
             <img src="img/10-aplicativos-mais-baixados.png" class="listaDeArtigos-artigo-img">
             <h2 class="listaDeArtigos-artigo-titulo">
-              Conheça os 10 aplicativos mais badalados do momento
+              Conheça os 10 aplicativos mais famosos do monmento do momento
             </h2>
             <p>
-              Listamos nesta semana alguns aplicativos que estão se destacando no mundo inteiro e merecem a sua atenção. Agora, mostramos os 10 apps mais badalados do momento e por que eles estão ganhando destaque.
+              Listamos alguns aplicativos que estão se destacando no mundo inteiro e merecem a sua atenção. Agora, mostramos os 10 apps mais famosos do do momento e por que eles estão ganhando destaque.
               <a href="#" class="listaDeArtigos-artigo-link">
                 Continuar lendo o post 1
               </a>
